vfpl_parser/src/snapshots/vfpl__parse__test__set_variable_string.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    VarSet {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "name",
        expr: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: String(
                    "Ferris",
                ),
            },
        ),
    },
)
