vfpl_parser/src/snapshots/vfpl__parse__test__terminate.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Terminate {
        span: Span {
            start: 0,
            end: 0,
        },
    },
)
