vfpl_parser/src/snapshots/vfpl__parse__test__while_loop_no_body.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    While {
        span: Span {
            start: 0,
            end: 0,
        },
        cond: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: True,
            },
        ),
        body: Body {
            span: Span {
                start: 0,
                end: 0,
            },
            stmts: [],
        },
    },
)
